bg on mobile fix

--- a/css/style.css
+++ b/css/style.css
@@ -472,7 +472,7 @@ h2 {
     border-radius: 50%;
   }
   #portfolio .header__title {
-    padding: 115px 0 0;
+    padding: 90px 0 0;
   }
   #portfolio .w-20 {
     width: 85%;
